Fix Android page jumping when five or more fields are specified. Remove transform styles from android. For some reason, this causes pages to jump when input boxes are selected or typed on.

--- a/res/generators/templates/application/public/jqtouch/jqtouch.css
+++ b/res/generators/templates/application/public/jqtouch/jqtouch.css
@@ -11,20 +11,20 @@ body {
     -webkit-user-select: none;
     -webkit-text-size-adjust: none;
     font-family: Helvetica;
-   -webkit-perspective: 800;
-   -webkit-transform-style: preserve-3d;
+/*   -webkit-perspective: 800; */
+/*   -webkit-transform-style: preserve-3d; */
 }
 .selectable, input, textarea {
     -webkit-user-select: auto;
 }
 body > * {
-   -webkit-backface-visibility: hidden;
+/*   -webkit-backface-visibility: hidden; */
+/*   -webkit-transform: translate3d(0,0,0) rotate(0) scale(1); */
     -webkit-box-sizing: border-box;
     display: none;
     position: absolute;
     left: 0;
     width: 100%;
-   -webkit-transform: translate3d(0,0,0) rotate(0) scale(1);
     min-height: 420px !important;
 }
 body.fullscreen > * {
